# AI-Agent-OS

./: .gitignore  README.md
.github/workflows/: release.yml
ai-os-frontend/: package-lock.json  package.json  tailwind.config.ts
ai-os-frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
ai-os-frontend/src/app/: globals.css  layout.tsx  page.tsx
my_local_agent/: .gitignore  README.md  append_core.py  append_tools.py  build_exe.py  chat_reader.py  config.py  list_tools.py  main.py  mlx_server_patch.py  rename_core_agent.py  replace_crossplatform.py  replace_tools.py  requirements.txt  telegram_client.py  test_agent.py  test_applescript.py  test_chunks.py  test_cron.py  test_db.py  test_get_jobs.py  test_jobs.py  test_mlx.py  test_prompt.py  test_prompt2.py  test_schema.py  test_tools_syntax.py  test_trigger.py  tg_login.py  wa_login.py
my_local_agent/.github/workflows/: release.yml
my_local_agent/agents/: core_agent.py
my_local_agent/core/: daemon.py  document_rag.py  listener.py  llm_factory.py  memory_rag.py  model_manager.py  scheduler.py  shared.py  stats.py
my_local_agent/prompts/: compaction.md  system.md  tiny_model.md
my_local_agent/tools/: agent_tools.py  browser_tools.py  converter_tools.py  database_tools.py  drive_tools.py  google_auth.py  google_tools.py  icloud_tools.py  os_tools.py  reel_tools.py  social_tools.py  video_tools.py
