[package]
name = "ai-os-backend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.0", features = [] }
tauri-plugin-shell = "2.0.0" # Aggiungi questa riga
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
